# inp-dashboard

./: .gitignore  .secrets.toml.exemple  README.md  home.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
auth/: login.py  logout.py  reset.py
core/: base.py  database.py  generics_mixins.py  mixins.py  settings.py
models/: partner.py  publication.py  users.py
pages/: sales_result.py
reports/: sales-boards.py  sales_boards.py
services/: authentication.py  partners_service.py  publications_service.py  sales_boards_service.py  user_service.py
utils/: comparison_table_data.py  generics.py  logging_config.py  teste.py
