[project]
name = "inp-dashboard"
authors = [{ name = "José Roberto Ferreira" }]
description = "INP Dashboard"
requires-python = ">=3.12"
version = "0.1.0"

[tool.taskipy.tasks]
run = "streamlit run main.py"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
